<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.example.manuel.tarea3.GestionarCoches">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/naranja"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:weightSum="5"

            >


            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="1"
                android:text="@string/ok"
                android:id="@+id/btnOk" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="1"
                android:text="@string/clear"
                android:id="@+id/btnClear" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1.6"
            android:weightSum="3">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/modelo"
                style="@style/cajasformulario"
                android:id="@+id/etxtModelo"
                android:background="@drawable/border"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/etxtColor"
                style="@style/cajasformulario"
                android:background="@drawable/border"
                android:hint="@string/color"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                style="@style/cajasformulario"
                android:background="@drawable/border"
                android:hint="@string/asientos"
                android:id="@+id/etxtAsientos"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rcv"
        android:background="@color/naranja"
        android:layout_weight="3">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
